# hermes-protocol

./: .travis.yml  Cargo.toml  Jenkinsfile  MANIFEST.in  README.md  generate_documentation.py  rustfmt.toml  setup.py  tox.ini  update_c_headers.sh  update_version.sh
hermes/: Cargo.toml
hermes-cli/: Cargo.toml
hermes-cli/src/: main.rs
hermes-ffi/: Cargo.toml
hermes-ffi-test/: Cargo.toml
hermes-ffi-test/src/: json_round_trips.rs  lib.rs
hermes-ffi/src/: lib.rs  ontology.rs  protocol_handler.rs
hermes-ffi/src/ontology/: asr.rs  audio_server.rs  dialogue.rs  hotword.rs  injection.rs  mod.rs  nlu.rs  tts.rs
hermes-ffi/src/protocol_handler/: facades.rs  json.rs  mod.rs  protocol_handler.rs  structures.rs
hermes-inprocess/: Cargo.toml
hermes-inprocess/src/: lib.rs
hermes-mqtt/: Cargo.toml
hermes-mqtt-ffi/: Cargo.toml  cbindgen.toml  cbindgen_full.toml  cbindgen_json.toml  create-so.sh
hermes-mqtt-ffi/src/: lib.rs
hermes-mqtt/src/: lib.rs  topics.rs
hermes-test-suite/: Cargo.toml
hermes-test-suite/src/: lib.rs
hermes-utils/: Cargo.toml
hermes-utils-derive/: Cargo.toml
hermes-utils-derive/src/: lib.rs
hermes-utils/src/: lib.rs
hermes-utils/tests/: example_derive.rs
hermes/src/: errors.rs  lib.rs
hermes/src/ontology/: asr.rs  audio_server.rs  dialogue.rs  hotword.rs  injection.rs  mod.rs  nlu.rs  tts.rs  vad.rs
hermes_ffi/: hermes.py  ontology.py
hermes_ffi/ffi/: ontology.py  utils.py
hermes_python/: __init__.py  hermes.py  ontology.py
hermes_python/ffi/: __init__.py  ontology.py  utils.py
requirements/: install.txt  tests.txt
src/: builtin_entities_ontology.rs  errors.rs  ffi.rs  inprocess.rs  lib.rs  mqtt.rs  ontology.rs
tests/: test_hermes.py  test_ontology.py
tests/integration/: test_integration.py
