[package]
name = "hermes"
version = "0.59.0-RC0-SNAPSHOT"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai"
]

[dependencies]
base64 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.57.3" }
semver = { version = "0.9", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[workspace]
members = [ "hermes-ffi", "hermes-mqtt", "hermes-inprocess", "hermes-test-suite" ]
