[package]
name = "hermes-ffi-test"
version = "0.63.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
full_bindings = []
json = ["hermes-ffi/json"]
default = ["full_bindings", "json"]

[dependencies]
failure = "0.1"
hermes = { path = "../hermes" }
hermes-ffi = { path = "../hermes-ffi" }
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
libc = "0.2"

