[package]
name = "hermes-ffi-test"
version = "0.68.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
full_bindings = ["hermes-ffi/full_bindings"]
structures = ["hermes-ffi/structures"]
json = ["hermes-ffi/json", "serde_json"]
default = ["structures", "json", "full_bindings"]

[dependencies]
failure = "0.1"
hermes = { path = "../hermes" }
hermes-ffi = { path = "../hermes-ffi" }
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
libc = "0.2"
serde_json = { version = "1.0", optional = true }

