[package]
name = "hermes-ffi"
version = "0.61.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
chrono = "0.4"
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "e7a9649df" }
hermes = { path = "../hermes" }
lazy_static = { version="1.0" }
libc = "0.2"
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.61.1" }
env_logger = "0.5.10"

[dev-dependencies]
spectral = "0.6"
