[package]
name = "hermes-ffi"
version = "0.67.0-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[features]
full_bindings = []
structures = []
json = ["serde_json"]
default = ["structures", "json", "full_bindings"]

[dependencies]
chrono = "0.4"
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
hermes = { path = "../hermes" }
lazy_static = { version="1.0" }
libc = "0.2"
serde_json = { version = "1.0", optional = true }
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.8" }
env_logger = "0.6"

[dev-dependencies]
spectral = "0.6"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.8" }
