[package]
name = "hermes-inprocess"
version = "0.60.0-RC2-SNAPSHOT"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
failure = "0.1"
ripb = { git="ssh://git@github.com/snipsco/ripb", rev="584f980" }
hermes = { path = ".." }
hermes-test-suite = { path = "../hermes-test-suite" }
log = "0.4"

[dev-dependencies]
semver = "0.9"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.61.1" }
