[package]
name = "hermes-inprocess"
version = "0.65.3"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
ripb = "0.3"
hermes = { path = "../hermes" }
hermes-test-suite = { path = "../hermes-test-suite" }
log = "0.4"

[dev-dependencies]
semver = "0.9"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.6" }
