[package]
name = "hermes-mqtt-ffi"
version = "0.61.0"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
full_bindings = []
default = ["full_bindings"]

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
hermes = { path = "../hermes" }
hermes-ffi = { path = "../hermes-ffi" }
hermes-mqtt = { path = "../hermes-mqtt" }
libc = "0.2"
log = "0.4"
snips-nlu-ontology-ffi = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.61.3" }
