[package]
name = "hermes-mqtt-ffi"
version = "0.64.2"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
full_bindings = ["hermes-ffi/full_bindings"]
structures = ["hermes-ffi/structures"]
json = ["hermes-ffi/json"]
default = ["structures", "json", "full_bindings"]

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "291ce1d" }
hermes = { path = "../hermes" }
hermes-ffi = { path = "../hermes-ffi" }
hermes-mqtt = { path = "../hermes-mqtt" }
libc = "0.2"
log = "0.4"
snips-nlu-ontology-ffi = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.4" }
# Needed to fix cbindgen issue. See https://github.com/eqrion/cbindgen/issues/221
snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.4" }
