[package]
name = "hermes-mqtt"
version = "0.52.3"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[dependencies]
hermes = { path = ".." }
hermes-test-suite = { path = "../hermes-test-suite" }
log = "0.4"
rumqtt = { git = "https://github.com/snipsco/rumqtt", rev = "22eded3f8304" }
serde = "1.0"
serde_json = "1.0"
strum = "0.8"
strum_macros = "0.8"

[dev-dependencies]
rand = "*"
semver = "0.9"
snips-queries-ontology = { path="../../snips-queries-ontology" }
