[package]
name = "hermes-mqtt"
version = "0.55.0-RC3"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]

[package.metadata.dinghy]
ignored_rustc_triples = ["arm-linux-androideabi", "armv7-linux-androideabi","aarch64-linux-android", "i686-linux-android", "x86_64-linux-android", "aarch64-apple-ios", "armv7-apple-ios", "armv7s-apple-ios", "i386-apple-ios", "x86_64-apple-ios"]

[dependencies]
failure = "0.1"
hermes = { path = ".." }
hermes-test-suite = { path = "../hermes-test-suite" }
log = "0.4"
rumqtt = { git = "https://github.com/snipsco/rumqtt", rev = "39880bf" }
serde = "1.0"
serde_json = "1.0"
strum = "0.8"
strum_macros = "0.8"
uuid = { version = "0.5", features = ["v4"] }

[dev-dependencies]
rand = "*"
semver = "0.9"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.54.2" }
