[package]
name = "hermes-mqtt"
version = "0.65.1"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

[dependencies]
failure = "0.1"
hermes = { path = "../hermes" }
hermes-test-suite = { path = "../hermes-test-suite" }
hostname = "0.1"
lazy_static = "1.2"
log = "0.4"
rumqtt = { git = "https://github.com/snipsco/rumqtt", rev = "f4e59501" }
serde = "1.0"
serde_json = "1.0"
strum = "0.13"
strum_macros = "0.13"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
rand = "0.6"
semver = "0.9"
snips-nlu-ontology = { git = "https://github.com/snipsco/snips-nlu-ontology", tag = "0.64.6" }

[package.metadata.dinghy]
ignored_rustc_triples = [
    "arm-linux-androideabi",
    "armv7-linux-androideabi",
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android",
    "aarch64-apple-ios",
    "armv7-apple-ios",
    "armv7s-apple-ios",
    "i386-apple-ios",
    "x86_64-apple-ios",
]
