[package]
name = "hermes-utils-derive"
version = "0.1.0"
authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.5"
quote = "1.0.2"
